# alea

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  alea.1  install-hooks.sh  install.sh  release.sh
.github/workflows/: ci.yml  release.yml
hooks/: pre-commit
scripts/: gen-drand-cas.py
src/: drand.c  drand.h  drand.rs  drand_cas.h  format.c  format.h  format.rs  https.h  https_bearssl.c  https_curl.c  main.c  main.rs  select.c  select.h  time.rs  timeutil.c  timeutil.h
