[package]
name = "alea"
version = "0.9.4"
edition = "2024"
license = "GPL-2.0-only"
description = "Verifiable random selection using drand public randomness"

[dependencies]
ureq = { version = "3", default-features = false, features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
