[package]
name = "alea"
version = "0.9.5"
edition = "2024"
license = "GPL-2.0-only"
description = "Verifiable random selection using drand public randomness"

[dependencies]
curl = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
strip = true
lto = true
